feat: remake api
breaks the userscript
